--- a/MUSKI/style.css
+++ b/MUSKI/style.css
@@ -25,7 +25,7 @@ body {
     padding: 0 20px;
 }
 .nav-link {
-    color: white;
+    color: #FF8C00;
     text-decoration: none;
     font-weight: bold;
 }
