--- a/MUSKI/style_noir.css
+++ b/MUSKI/style_noir.css
@@ -3,7 +3,8 @@ body {
     font-family: sans-serif;
     margin: 0;
     /* Couleur de fond NOIRE pour le corps */
-    background-color: #000000; 
+    background-color: #000000;
+    background-image: url(''); 
     /* Texte de base clair */
     color: #f4f4f4; 
 }
@@ -54,6 +55,7 @@ body {
 .illustration-colonne {
     flex: 1; 
     min-width: 250px; 
+    max-width: 500px; 
 }
 
 .text-colonne {
