ajout des meta descriptions

--- a/MUSKI/style_noir.css
+++ b/MUSKI/style_noir.css
@@ -16,7 +16,7 @@ body {
 
 /* --- Style de l'En-tête (Header) --- */
 .header {
-    /* Couleur de fond claire pour l'en-tête (blanc cassé) */
+    /* Couleur de fond claire pour l'en-tête blanc cassé */
     background-color: #f4f4f4; 
     color: #000000;
     padding: 10px 0;
