modification buste cliquable

--- a/MUSKI/accueil.css
+++ b/MUSKI/accueil.css
@@ -120,7 +120,10 @@ header {
 .bras { }
 .jambes { }
 .dos { }
-.buste { }
+.buste { 
+    position: absolute;
+    clip-path: polygon(27% 30%, 28% 28%, 32% 26%, 38% 26%, 45% 26%, 48% 26%, 55% 26%, 63% 26%, 67% 28%, 70% 29%, 68% 31%, 63% 32%, 56% 32%, 51% 31%, 46% 31%, 41% 32%, 35% 32%, 30% 31%);
+}
 
 /* =========================
    FOOTER
