--- a/MUSKI/styles/accueil.css
+++ b/MUSKI/styles/accueil.css
@@ -57,9 +57,8 @@ body {
 
 .navbar a {
     text-decoration: none;
-    color: #ff8c00;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 30px;
 }
 
 /* logo */
@@ -151,21 +150,29 @@ body {
     display: flex; 
     align-items: flex-start; 
     gap: 30px; 
-    margin-bottom: 40px;
     padding: 20px;
+    line-height: 2em;
 }
 .text-colonne {
     flex: 2; 
     text-decoration: none;
-    text-align: left;
-    color: var(--reverse-text-color);
+    color: var(--reverse-text-color);    
 }
-.footer-link {
+.link {
+    background-color: #FF8C00; /* Orange (couleur d'accentuation) */
+    color: #000000;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: bold;
     text-decoration: none;
+
 }
 .button {
     background-color: #FF8C00; /* Orange (couleur d'accentuation) */
-    color: var(--reverse-text-color);
+    color: #000000;
     padding: 10px 15px;
     border: none;
     border-radius: 3px;
