--- a/MUSKI/styles/style.css
+++ b/MUSKI/styles/style.css
@@ -13,7 +13,6 @@ body {
 /* --- Styles de l'En-tête (Header) --- */
 .header {
     background-color: #333;
-    color: white;
     padding: 10px 0;
 }
 .nav-container {
@@ -113,7 +112,7 @@ body {
     margin-bottom: 40px;
     padding: 20px;
 }
-.footer-link {
+.link {
     text-decoration: none;
 }
 
