--- a/MUSKI/styles/style_noir.css
+++ b/MUSKI/styles/style_noir.css
@@ -4,32 +4,46 @@
     --background-light: #f4f4f4;
     --text-light: #000000;
     --reverse-text-light: #f4f4f4;
+    --content-light: #ffffff;
+    --table-background-light: #555;
+    --link-color-light: #0000EE;
+    --reverse-link-color-light: #1E90FF;
 
     /* Thème sombre */
     --color-primary-dark: #f4f4f4;
     --background-dark: #000000;
     --text-dark: #f4f4f4;
     --reverse-text-dark: #000000;
+    --content-dark: #333333;
+    --table-background-dark: #111111;
+    --link-color-dark: #1E90FF;
+    --reverse-link-color-dark: #0000EE;
 
-    /* Par défaut : thème clair */
+    /* Par défaut : thème sombre */
     --primary-color: var(--color-primary-dark);
     --background-color: var(--background-dark);
     --text-color: var(--text-dark);
     --reverse-text-color: var(--reverse-text-dark);
+    --content-color: var(--content-dark);
+    --table-background-color: var(--table-background-dark);
+    --link-color: var(--link-color-dark);
+    --reverse-link-color: var(--reverse-link-color-dark);
 }
 .light {
     --primary-color: var(--color-primary-light);
     --background-color: var(--background-light);
     --text-color: var(--text-light);
     --reverse-text-color: var(--reverse-text-light);
+    --content-color: var(--content-light);
+    --table-background-color: var(--table-background-light);
+    --link-color: var(--link-color-light);
+    --reverse-link-color: var(--reverse-link-color-light);
 }
 body {
     font-family: sans-serif;
     margin: 0;
-    /* Couleur de fond noire pour le corps */
-    background-color: var(--background-dark);
-    /* Texte de base clair */
-    color: var(--text-dark);
+    background-color: var(--background-color);
+    color: var(--text-color);
 }
 .page-content {
     max-width: 900px;
@@ -39,9 +53,7 @@ body {
 
 /* --- Style de l'En-tête (Header) --- */
 .header {
-    /* Couleur de fond blanche pour l'en-tête */
     background-color: var(--primary-color); 
-    color: var(--text-color);
     padding: 10px 0;
 }
 .nav-container {
@@ -51,12 +63,6 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-}
-.nav-link {
-    /* Couleur orange pour les liens de navigation */
-    color: #FF8C00; 
-    text-decoration: none;
-    font-weight: bold;
 }
 .logo img {
     height: 50px;
@@ -70,7 +76,7 @@ body {
     margin-bottom: 40px;
     padding: 20px;
     /* Fond noir pour les sections de contenu */
-    background-color: #333333;
+    background-color: var(--content-color);
     border-radius: 8px;
 }
 
@@ -124,12 +130,13 @@ body {
     border-collapse: collapse;
     margin-top: 20px;
     /* Fond du tableau noir cassé */
-    background-color: #111111; 
+    background-color: var(--text-color); 
     margin-bottom: 40px;
+    color: #f4f4f4;
 }
 .exercices-table td, .exercices-table th {
     /* Bordures claires */
-    border: 1px solid #555555; 
+    border: 1px solid #ddd; 
     padding: 8px;
     text-align: left;
 }
@@ -137,15 +144,42 @@ body {
     /* Rend les titres d'en-tête du tableau plus visibles */
     color: #FF8C00; 
 }
+.link {
+    color: var(--link-color);
+}
+.table-link {
+    color: var(--reverse-link-color);
+}
+
 .footer-content-section {
     display: flex; 
     align-items: flex-start; 
     gap: 30px; 
-    margin-bottom: 40px;
     padding: 20px;
+    line-height: 1.5em;
+    color: var(--reverse-text-color);
 }
-.footer-link {
+.link-button {
+    background-color: #FF8C00; /* Orange (couleur d'accentuation) */
+    color: #000000;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: bold;
     text-decoration: none;
+
+}
+.button {
+    background-color: #FF8C00; /* Orange (couleur d'accentuation) */
+    color: #000000;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: bold;
 }
 
 /* --- Styles spécifiques au Formulaire de Contact --- */
@@ -168,7 +202,7 @@ body {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
-    color: var(--text-color);
+    color: var(--reverse-text-color);
 }
 
 .contact-form input[type="text"],
@@ -195,16 +229,4 @@ body {
 .radio-group label {
     font-weight: normal;
     margin-right: 10px;
-}
-
-/* Style du bouton d'envoi */
-.button {
-    background-color: #FF8C00; /* Orange (couleur d'accentuation) */
-    color: var(--reverse-text-color);
-    padding: 10px 15px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    font-size: 1em;
-    font-weight: bold;
 }
