--- a/MUSKI/styles/style.css
+++ b/MUSKI/styles/style.css
@@ -133,7 +133,7 @@ body {
     color: var(--link-color);
 }
 .table-link {
-    color: var(--reverse-link-color);
+    color: #1E90FF;
 }
 
 .footer-content-section {
@@ -142,18 +142,6 @@ body {
     gap: 30px; 
     padding: 20px;
     line-height: 1.5em;
-}
-.link-button {
-    background-color: #FF8C00; /* Orange (couleur d'accentuation) */
-    color: #000000;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    font-size: 1em;
-    font-weight: bold;
-    text-decoration: none;
-
 }
 .button {
     background-color: #FF8C00; /* Orange (couleur d'accentuation) */
@@ -164,6 +152,7 @@ body {
     cursor: pointer;
     font-size: 1em;
     font-weight: bold;
+    text-decoration: none;
 }
 
 /* --- Styles spécifiques au Formulaire de Contact --- */
