--- a/MUSKI/styles/accueil.css
+++ b/MUSKI/styles/accueil.css
@@ -1,3 +1,14 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+/*
+J'ai fait commenté par IA car je déteste écrire.
+Je me suis permis d'utiliser autoprefixer car cela nous est donné par monsieur Martin-Nevot dans le CM-1-1.
+Signé l'équipe de MusKi.
+*/
 :root {
     /* Thème clair */
     --color-primary-light: #000000;
@@ -12,20 +23,19 @@
     /* Par défaut : thème sombre */
     --primary-color: var(--color-primary-dark);
     --secondary-color: var(--color-secondary-dark);
-    --content-color: var(--content-dark);
     --link-color: var(--link-color-dark);
 }
 .light {
     --primary-color: var(--color-primary-light);
     --secondary-color: var(--color-secondary-light);
-    --content-color: var(--content-light);
     --link-color: var(--link-color-light);
 }
 /* reset complet*/
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 /* style global */
@@ -46,9 +56,15 @@ body {
 .navbar {
     max-width: 900px;
     margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 0 20px;
 }
 
@@ -96,8 +112,12 @@ body {
 
 /* zone personnage */
 .personnage-zone {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-bottom: 80px;
 }
 
@@ -107,7 +127,8 @@ body {
     background-color: #333333;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 0 40px rgba(0, 0, 0, 0.8);
+    -webkit-box-shadow: 0 0 40px rgba(0, 0, 0, 0.8);
+            box-shadow: 0 0 40px rgba(0, 0, 0, 0.8);
 }
 
 /* image de fond non-cliquable */
@@ -123,12 +144,19 @@ body {
     left: 30px;
     width: 300px;
     cursor: pointer;
+    -webkit-transition: -webkit-transform 0.2s ease, -webkit-filter 0.2s ease;
+    transition: -webkit-transform 0.2s ease, -webkit-filter 0.2s ease;
+    -o-transition: transform 0.2s ease, filter 0.2s ease;
     transition: transform 0.2s ease, filter 0.2s ease;
+    transition: transform 0.2s ease, filter 0.2s ease, -webkit-transform 0.2s ease, -webkit-filter 0.2s ease;
 }
 
 .muscle:hover {
-    filter: brightness(1.4);
-    transform: scale(1.01);
+    -webkit-filter: brightness(1.4);
+            filter: brightness(1.4);
+    -webkit-transform: scale(1.01);
+        -ms-transform: scale(1.01);
+            transform: scale(1.01);
 }
 
 /* ajustements individuels des muscles */
@@ -136,34 +164,45 @@ body {
     top: 4%;
     left: 8,3%;
     position: absolute;
-    clip-path: polygon(70% 29%, 73% 30%, 77% 30%, 80% 30%, 82% 30%, 84% 31%, 84% 32%, 86% 33%, 86% 36%, 86% 36%, 89% 38%, 91% 40%, 92% 42%, 92% 44%, 91% 46%, 84% 46%, 82% 43%, 79% 42%, 77% 40%, 77% 37%, 72% 35%, 70% 33%, 69% 29%);
+    -webkit-clip-path: polygon(70% 29%, 73% 30%, 77% 30%, 80% 30%, 82% 30%, 84% 31%, 84% 32%, 86% 33%, 86% 36%, 86% 36%, 89% 38%, 91% 40%, 92% 42%, 92% 44%, 91% 46%, 84% 46%, 82% 43%, 79% 42%, 77% 40%, 77% 37%, 72% 35%, 70% 33%, 69% 29%);
+            clip-path: polygon(70% 29%, 73% 30%, 77% 30%, 80% 30%, 82% 30%, 84% 31%, 84% 32%, 86% 33%, 86% 36%, 86% 36%, 89% 38%, 91% 40%, 92% 42%, 92% 44%, 91% 46%, 84% 46%, 82% 43%, 79% 42%, 77% 40%, 77% 37%, 72% 35%, 70% 33%, 69% 29%);
 }
 .epaules {
     position: absolute;
-    clip-path: polygon(15% 30%, 14% 28%, 14% 26%, 17% 25%, 20% 24%, 23% 23%, 27% 24%, 29% 24%, 33% 23%, 38% 22%, 41% 23%, 45% 25%, 45% 26%, 40% 25%, 34% 26%, 31% 27%, 28% 29%, 21% 30%);
+    -webkit-clip-path: polygon(15% 30%, 14% 28%, 14% 26%, 17% 25%, 20% 24%, 23% 23%, 27% 24%, 29% 24%, 33% 23%, 38% 22%, 41% 23%, 45% 25%, 45% 26%, 40% 25%, 34% 26%, 31% 27%, 28% 29%, 21% 30%);
+            clip-path: polygon(15% 30%, 14% 28%, 14% 26%, 17% 25%, 20% 24%, 23% 23%, 27% 24%, 29% 24%, 33% 23%, 38% 22%, 41% 23%, 45% 25%, 45% 26%, 40% 25%, 34% 26%, 31% 27%, 28% 29%, 21% 30%);
 }
 .jambes {
     position: absolute;
-    clip-path: polygon(33% 41%, 36% 41%, 37% 42%, 35% 43%, 39% 43%, 41% 42%, 47% 42%, 52% 42%, 57% 42%, 61% 42%, 63% 42%, 66% 43%, 67% 44%, 68% 46%, 69% 48%, 70% 50%, 72% 51%, 72% 52%, 75% 54%, 78% 56%, 79% 58%, 81% 61%, 85% 63%, 82% 62%, 86% 64%, 84% 64%, 83% 65%, 85% 66%, 89% 66%, 84% 67%, 84% 68%, 85% 68%, 82% 68%, 80% 68%, 79% 67%, 80% 66%, 80% 65%, 78% 65%, 77% 66%, 75% 66%, 72% 65%, 70% 66%, 68% 68%, 66% 69%, 68% 71%, 68% 72%, 72% 73%, 74% 74%, 77% 76%, 82% 76%, 84% 75%, 86% 75%, 88% 75%, 88% 73%, 85% 72%, 88% 72%, 91% 72%, 92% 72%, 92% 73%, 94% 73%, 93% 73%, 97% 74%, 96% 75%, 94% 75%, 95% 76%, 94% 75%, 97% 77%, 98% 78%, 95% 77%, 93% 77%, 95% 78%, 94% 79%, 94% 80%, 93% 80%, 92% 80%, 92% 80%, 90% 81%, 87% 82%, 85% 82%, 85% 82%, 82% 82%, 79% 82%, 77% 82%, 74% 82%, 70% 81%, 64% 82%, 67% 81%, 66% 80%, 63% 80%, 65% 79%, 61% 79%, 60% 78%, 63% 75%, 63% 73%, 60% 72%, 61% 71%, 58% 70%, 55% 67%, 53% 62%, 52% 59%, 49% 56%, 48% 55%, 45% 57%, 43% 62%, 42% 66%, 41% 68%, 38% 70%, 38% 72%, 36% 73%, 36% 74%, 40% 76%, 37% 77%, 37% 77%, 36% 78%, 34% 78%, 31% 78%, 28% 79%, 27% 80%, 24% 82%, 27% 81%, 30% 80%, 33% 80%, 36% 79%, 39% 80%, 41% 80%, 40% 81%, 42% 82%, 42% 82%, 40% 82%, 40% 83%, 37% 83%, 35% 83%, 32% 83%, 31% 83%, 29% 83%, 26% 82%, 23% 82%, 19% 82%, 17% 82%, 12% 81%, 8% 79%, 6% 78%, 8% 76%, 7% 75%, 11% 73%, 12% 72%, 14% 70%, 11% 68%, 16% 66%, 17% 63%, 13% 64%, 13% 62%, 10% 63%, 14% 61%, 13% 60%, 14% 60%, 18% 60%, 20% 59%, 22% 61%, 26% 60%, 32% 59%, 28% 57%, 25% 56%, 24% 54%, 22% 57%, 19% 59%, 15% 59%, 16% 58%, 16% 57%, 13% 58%, 15% 57%, 16% 56%, 20% 55%, 24% 53%, 24% 50%, 26% 48%, 28% 45%, 29% 43%, 32% 42%);
+    -webkit-clip-path: polygon(33% 41%, 36% 41%, 37% 42%, 35% 43%, 39% 43%, 41% 42%, 47% 42%, 52% 42%, 57% 42%, 61% 42%, 63% 42%, 66% 43%, 67% 44%, 68% 46%, 69% 48%, 70% 50%, 72% 51%, 72% 52%, 75% 54%, 78% 56%, 79% 58%, 81% 61%, 85% 63%, 82% 62%, 86% 64%, 84% 64%, 83% 65%, 85% 66%, 89% 66%, 84% 67%, 84% 68%, 85% 68%, 82% 68%, 80% 68%, 79% 67%, 80% 66%, 80% 65%, 78% 65%, 77% 66%, 75% 66%, 72% 65%, 70% 66%, 68% 68%, 66% 69%, 68% 71%, 68% 72%, 72% 73%, 74% 74%, 77% 76%, 82% 76%, 84% 75%, 86% 75%, 88% 75%, 88% 73%, 85% 72%, 88% 72%, 91% 72%, 92% 72%, 92% 73%, 94% 73%, 93% 73%, 97% 74%, 96% 75%, 94% 75%, 95% 76%, 94% 75%, 97% 77%, 98% 78%, 95% 77%, 93% 77%, 95% 78%, 94% 79%, 94% 80%, 93% 80%, 92% 80%, 92% 80%, 90% 81%, 87% 82%, 85% 82%, 85% 82%, 82% 82%, 79% 82%, 77% 82%, 74% 82%, 70% 81%, 64% 82%, 67% 81%, 66% 80%, 63% 80%, 65% 79%, 61% 79%, 60% 78%, 63% 75%, 63% 73%, 60% 72%, 61% 71%, 58% 70%, 55% 67%, 53% 62%, 52% 59%, 49% 56%, 48% 55%, 45% 57%, 43% 62%, 42% 66%, 41% 68%, 38% 70%, 38% 72%, 36% 73%, 36% 74%, 40% 76%, 37% 77%, 37% 77%, 36% 78%, 34% 78%, 31% 78%, 28% 79%, 27% 80%, 24% 82%, 27% 81%, 30% 80%, 33% 80%, 36% 79%, 39% 80%, 41% 80%, 40% 81%, 42% 82%, 42% 82%, 40% 82%, 40% 83%, 37% 83%, 35% 83%, 32% 83%, 31% 83%, 29% 83%, 26% 82%, 23% 82%, 19% 82%, 17% 82%, 12% 81%, 8% 79%, 6% 78%, 8% 76%, 7% 75%, 11% 73%, 12% 72%, 14% 70%, 11% 68%, 16% 66%, 17% 63%, 13% 64%, 13% 62%, 10% 63%, 14% 61%, 13% 60%, 14% 60%, 18% 60%, 20% 59%, 22% 61%, 26% 60%, 32% 59%, 28% 57%, 25% 56%, 24% 54%, 22% 57%, 19% 59%, 15% 59%, 16% 58%, 16% 57%, 13% 58%, 15% 57%, 16% 56%, 20% 55%, 24% 53%, 24% 50%, 26% 48%, 28% 45%, 29% 43%, 32% 42%);
+            clip-path: polygon(33% 41%, 36% 41%, 37% 42%, 35% 43%, 39% 43%, 41% 42%, 47% 42%, 52% 42%, 57% 42%, 61% 42%, 63% 42%, 66% 43%, 67% 44%, 68% 46%, 69% 48%, 70% 50%, 72% 51%, 72% 52%, 75% 54%, 78% 56%, 79% 58%, 81% 61%, 85% 63%, 82% 62%, 86% 64%, 84% 64%, 83% 65%, 85% 66%, 89% 66%, 84% 67%, 84% 68%, 85% 68%, 82% 68%, 80% 68%, 79% 67%, 80% 66%, 80% 65%, 78% 65%, 77% 66%, 75% 66%, 72% 65%, 70% 66%, 68% 68%, 66% 69%, 68% 71%, 68% 72%, 72% 73%, 74% 74%, 77% 76%, 82% 76%, 84% 75%, 86% 75%, 88% 75%, 88% 73%, 85% 72%, 88% 72%, 91% 72%, 92% 72%, 92% 73%, 94% 73%, 93% 73%, 97% 74%, 96% 75%, 94% 75%, 95% 76%, 94% 75%, 97% 77%, 98% 78%, 95% 77%, 93% 77%, 95% 78%, 94% 79%, 94% 80%, 93% 80%, 92% 80%, 92% 80%, 90% 81%, 87% 82%, 85% 82%, 85% 82%, 82% 82%, 79% 82%, 77% 82%, 74% 82%, 70% 81%, 64% 82%, 67% 81%, 66% 80%, 63% 80%, 65% 79%, 61% 79%, 60% 78%, 63% 75%, 63% 73%, 60% 72%, 61% 71%, 58% 70%, 55% 67%, 53% 62%, 52% 59%, 49% 56%, 48% 55%, 45% 57%, 43% 62%, 42% 66%, 41% 68%, 38% 70%, 38% 72%, 36% 73%, 36% 74%, 40% 76%, 37% 77%, 37% 77%, 36% 78%, 34% 78%, 31% 78%, 28% 79%, 27% 80%, 24% 82%, 27% 81%, 30% 80%, 33% 80%, 36% 79%, 39% 80%, 41% 80%, 40% 81%, 42% 82%, 42% 82%, 40% 82%, 40% 83%, 37% 83%, 35% 83%, 32% 83%, 31% 83%, 29% 83%, 26% 82%, 23% 82%, 19% 82%, 17% 82%, 12% 81%, 8% 79%, 6% 78%, 8% 76%, 7% 75%, 11% 73%, 12% 72%, 14% 70%, 11% 68%, 16% 66%, 17% 63%, 13% 64%, 13% 62%, 10% 63%, 14% 61%, 13% 60%, 14% 60%, 18% 60%, 20% 59%, 22% 61%, 26% 60%, 32% 59%, 28% 57%, 25% 56%, 24% 54%, 22% 57%, 19% 59%, 15% 59%, 16% 58%, 16% 57%, 13% 58%, 15% 57%, 16% 56%, 20% 55%, 24% 53%, 24% 50%, 26% 48%, 28% 45%, 29% 43%, 32% 42%);
  }
 .buste { 
     position: absolute;
-    clip-path: polygon(27% 30%, 28% 28%, 32% 26%, 38% 26%, 45% 26%, 48% 26%, 55% 26%, 63% 26%, 67% 28%, 70% 29%, 68% 31%, 63% 32%, 56% 32%, 51% 31%, 46% 31%, 41% 32%, 35% 32%, 30% 31%);
+    -webkit-clip-path: polygon(27% 30%, 28% 28%, 32% 26%, 38% 26%, 45% 26%, 48% 26%, 55% 26%, 63% 26%, 67% 28%, 70% 29%, 68% 31%, 63% 32%, 56% 32%, 51% 31%, 46% 31%, 41% 32%, 35% 32%, 30% 31%);
+            clip-path: polygon(27% 30%, 28% 28%, 32% 26%, 38% 26%, 45% 26%, 48% 26%, 55% 26%, 63% 26%, 67% 28%, 70% 29%, 68% 31%, 63% 32%, 56% 32%, 51% 31%, 46% 31%, 41% 32%, 35% 32%, 30% 31%);
 }
 .cardio {
     
     position: absolute;
-    clip-path: polygon(39% 34%, 43% 32%, 53% 32%, 57% 34%, 57% 36%, 56% 38%, 50% 39%, 43% 39%, 39% 38%);
+    -webkit-clip-path: polygon(39% 34%, 43% 32%, 53% 32%, 57% 34%, 57% 36%, 56% 38%, 50% 39%, 43% 39%, 39% 38%);
+            clip-path: polygon(39% 34%, 43% 32%, 53% 32%, 57% 34%, 57% 36%, 56% 38%, 50% 39%, 43% 39%, 39% 38%);
 }
 .footer-content-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex; 
-    align-items: flex-start; 
+    -webkit-box-align: start; 
+        -ms-flex-align: start; 
+            align-items: flex-start; 
     gap: 30px; 
     padding: 20px;
     line-height: 2em;
 }
 .text-colonne {
-    flex: 2; 
+    -webkit-box-flex: 2;
+        -ms-flex: 2;
+            flex: 2; 
     text-decoration: none;
 }
 .button {
@@ -177,9 +216,7 @@ body {
     font-weight: bold;
     text-decoration: none;
 }
-/* =========================
-   RESPONSIVE MOBILE
-========================= */
+/*-- RESPONSIVE MOBILE --*/
 @media screen and (max-width: 768px) {
 
     header {
