lien plus clair

--- a/MUSKI/styles/style.css
+++ b/MUSKI/styles/style.css
@@ -20,7 +20,7 @@ Signé l'équipe de MusKi.
     --color-primary-dark: #f4f4f4;
     --color-secondary-dark: #000000;
     --content-dark: #333333;
-    --link-color-dark: #1E90FF;
+    --link-color-dark: #1fd2ff;
 
     /* Par défaut : thème sombre */
     --primary-color: var(--color-primary-dark);
